repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__project_report__orphaned_with_reports.snap
---
source: repology-webapp/tests/snapshot_tests/project_report.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: text/html
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 5062
---
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="utf-8">
	<meta name="viewport" content="width=device-width, initial-scale=1">

	<meta name="description" content="Multiple package repositories analyzer">
	<meta name="keywords" content="repository, package, packages, version, orphaned-with-reports">
	<meta name="author" content="Dmitry Marakasov">


	<title>orphaned-with-reports reports - Repology</title>
	<link rel="stylesheet" href="/static/bootstrap.min.v3.3.7.8dc6d358477be27a.css">
	<link rel="stylesheet" href="/static/repology.v21.bb7b05a7b3bfbdb9.css">
	<link rel="icon" href="/static/repology.v1.6108dff405ea1a42.ico" sizes="16x16 32x32 64x64" type="image/x-icon">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology packages" href="/opensearch/project.xml">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology maintainers" href="/opensearch/maintainer.xml">
</head>
<body>


<div class="site-alert-outer">
	<div class="container site-alert-inner">
		<p><a href="https://repology.org/">repology.org</a> domain is back up, repology.amdmi3.ru will be discontinued on October 9th<p>
	</div>
</div>


<nav class="navbar navbar-default navbar-static-top">
	<div class="container">
		<div class="navbar-header">
			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#repology-navbar-collapse" aria-expanded="false">
				<span class="sr-only">Toggle navigation</span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
			</button>
			<a class="navbar-brand" href="/">
				<img alt="Repology" src="/static/repology40x40.v1.0ea026630d9180a2.png" width="40" height="40">
			</a>
		</div>

		<div class="collapse navbar-collapse" id="repology-navbar-collapse">
			<ul class="nav navbar-nav">
				<li class="active"><a href="/projects/">Projects</a></li>
				<li><a href="/maintainers/">Maintainers</a></li>
				<li><a href="/repositories/statistics">Repositories</a></li>
				<li><a href="/tools">Tools</a></li>
				<li><a href="/security/recent-cves">Security</a></li>
			</ul>
			<ul class="nav navbar-nav navbar-right">
				<li><a href="/news">News</a></li>
				<li><a href="/docs">Docs</a></li>
			</ul>
		</div>
	</div>
</nav>


<div class="container">
	
<div class="btn-group pageheader-right">
	
	<a href="/project/orphaned-with-reports/history" class="btn btn-default">History</a>
	
	
	
	
	<a href="/project/orphaned-with-reports/report" class="btn btn-default active" rel="nofollow"><span class="text-danger">Report</span></a>
</div>

	<h1 class="page-header">Report problem for <strong>orphaned-with-reports</strong></h1>
</div>



<div class="container">







<p>While repology tries its best in matching packages across different repositories, this is quite a complex task:</p>
<ul>
	<li>Packages of a single software project may be named differently in some repositories (for instance, <b>libagg</b> vs. <b>agg</b>, <b>dungeoncrawl</b> vs. <b>dungeon-crawl</b>, <b>fonts-linuxlibertine</b> vs. <b>fonts-ttf-linuxlibertine</b> vs. <b>linux-libertine-fonts</b> vs. <b>linuxlibertine-fonts-ttf</b>).</li>
	<li>There may be multiple unrelated software projects with a same name (for instance, <b>clementine</b> is both X11 window manager and a media player).</li>
	<li>Some packages may use incorrect versions (for instance, picking "next" version number which was not released yet when packaging a git snapshot, or using dates and commit hashes instead of version numbers).</li>
</ul>
<p>Repology uses a set of manually edited rules to resolve these cases. You may submit a change to the <a href="https://github.com/repology/repology-rules">ruleset</a> directly or use this form to suggest an improvement to the ruleset. Please only use this for problems which may be fixed by the ruleset (which are basically problems listed above).</p>


<h2>Current reports (1)</h2>


<div class="panel panel-default">
	<div class="panel-heading">
		Created more than a year ago,
		not processed yet
	</div>
	<ul class="list-group">
	
	
	
	
	
		<li class="list-group-item break-word"><b>Comment:</b><br>
			
		</li>
	
	
	</ul>
</div>




<div class="alert alert-warning" role="alert">Project is gone, so new reports are disabled.</div>

</div>


<footer class="footer">
	<div class="container">
		<p class="pull-right footer-links">
			GitHub repositories:
			<a href="https://github.com/repology/repology-rs/tree/master/repology-webapp">webapp</a>,
			<a href="https://github.com/repology/repology-updater">updater</a>,
			<a href="https://github.com/repology/repology-rules">ruleset</a>
		</p>
		<p>
			Copyright (C) 2016-2026 Dmitry Marakasov<br>
			Code licensed under GPLv3+.
			
		</p>
	</div>
</footer>

<script src="/static/jquery-3.7.1.min.cc6904672d4db9a3.js"></script>
<script src="/static/bootstrap.min.v3.3.7.66502a3c5769c640.js"></script>
<script src="/static/moment.min.v2.29.2.b7efa16ed0d164d6.js"></script>
<script src="/static/repology.v2.ee0228ab3d88406f.js"></script>

</body>
</html>
